--- a/views/templates/header.html
+++ b/views/templates/header.html
@@ -19,7 +19,7 @@
         </button> 
         <nav>
             <ul>
-                <li><a href="/views/home.html">HOME</a></li>
+                <li><a href="/">HOME</a></li>
                 <li><a href="/views/quem-somos.html">QUEM SOMOS</a></li>
                 <li><a href="/views/clinica.html">CLÍNICA</a></li>
                 <li><a href="/views/painel-cliente.html">PAINEL DO CLIENTE</a></li>
