--- a/views/plano-inicio.html
+++ b/views/plano-inicio.html
@@ -3,20 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JIFA Odontologia</title>
+    <title>JIFA Odontologia - Planos</title>
     
-    <!-- styles e scripts -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="../../assets/css/telainicio.css"> <!-- CSS externo -->
-    <script src="https://kit.fontawesome.com/8372ccf781.js" crossorigin="anonymous" defer></script>
-    <script src="../../assets/js/padronizacao.js" defer></script>
-</head>
+    <link rel="stylesheet" href="/assets/css/telainicio.css"> <script src="https://kit.fontawesome.com/8372ccf781.js" crossorigin="anonymous" defer></script>
+    <script src="/assets/js/padronizacao.js" defer></script> </head>
 <body>
     <div id="header-placeholder"></div>
 
     <div class="container py-5">
         <div class="d-flex justify-content-end mb-4">
-            <a href="aquisicao.html" target="_blank" class="btn-plan"
+             <a href="/views/aquisicao.html" target="_blank" class="btn-plan"
                onclick="setPlano('PLANO INDIVIDUAL', 'https://img.freepik.com/fotos-premium/uma-mulher-sorridente-numa-cadeira-dentaria-pronta-para-uma-consulta-dentaria_1276740-36733.jpg', 74.99, ['Consulta','Limpeza','Radiografia','Extração','Restauração','Emergência','Tratamento de Canal','Cirurgia','Atendimento rápido','Desconto em procedimentos não cobertos'])">
                 ADQUIRA SEU PLANO
             </a>
@@ -25,38 +22,32 @@
         <h2 class="section-title text-center">TIPOS DE PLANOS</h2>
         <div class="row text-center">
             <div class="col-md-4">
-                <a href="plano-individual.html">
+                 <a href="/views/plano-individual.html">
                     <img src="https://img.freepik.com/fotos-premium/uma-mulher-sorridente-numa-cadeira-dentaria-pronta-para-uma-consulta-dentaria_1276740-36733.jpg" class="img-fluid mb-2 img-uniform" alt="Plano Individual">
                 </a>
                 <h5>PLANO INDIVIDUAL</h5>
             </div>
             <div class="col-md-4">
-                <a href="plano-familiar.html">
-                    <img src="https://img.freepik.com/fotos-gratis/pais-felizes-rindo-junto-com-a-filha_53876-97234.jpg" class="img-fluid mb-2 img-uniform" alt="Plano Familiar">
+                <a href="/views/plano-familiar.html"> <img src="https://img.freepik.com/fotos-gratis/pais-felizes-rindo-junto-com-a-filha_53876-97234.jpg" class="img-fluid mb-2 img-uniform" alt="Plano Familiar">
                 </a>
                 <h5>PLANO FAMILIAR</h5>
             </div>
             <div class="col-md-4">
-                <a href="plano-coletivo.html">
-                    <img src="../../assets/images/planos/img.png" class="img-fluid mb-2 img-uniform" alt="Plano Coletivo">
-                </a>
+                <a href="/views/plano-coletivo.html"> <img src="/assets/images/planos/img.png" class="img-fluid mb-2 img-uniform" alt="Plano Coletivo"> </a>
                 <h5>PLANO COLETIVO</h5>
             </div>            
         </div>
 
-        <button class="btn btn-orcamento" onclick="window.location.href='aquisicao.html'">SOLICITE UM ORÇAMENTO</button>
+         <button class="btn btn-orcamento" onclick="window.location.href='/views/aquisicao.html'">SOLICITE UM ORÇAMENTO</button>
 
         <h2 class="section-title text-center mt-5">BENEFÍCIOS DOS PLANOS DE SAÚDE</h2>
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="../../assets/images/planos/img1.png" class="img-fluid mb-2 img-uniform" alt="Benefício 1">
-            </div>
+                <img src="/assets/images/planos/img1.png" class="img-fluid mb-2 img-uniform" alt="Benefício 1"> </div>
             <div class="col-md-4">
-                <img src="../../assets/images/planos/img2.png" class="img-fluid mb-2 img-uniform" alt="Benefício 2">
-            </div>
+                <img src="/assets/images/planos/img2.png" class="img-fluid mb-2 img-uniform" alt="Benefício 2"> </div>
             <div class="col-md-4">
-                <img src="../../assets/images/planos/img3.png" class="img-fluid mb-2 img-uniform" alt="Benefício 3">
-            </div>            
+                <img src="/assets/images/planos/img3.png" class="img-fluid mb-2 img-uniform" alt="Benefício 3"> </div>            
         </div>
 
         <h3 class="section-title text-center mt-5">FALE COM A NOSSA EQUIPE</h3>
@@ -87,26 +78,13 @@
     <div id="footer-placeholder"></div>
 
     <script>
+        // Esta função é específica para esta página, então pode continuar aqui.
         function setPlano(nome, imagem, preco, beneficios) {
             localStorage.setItem('plano_nome', nome);
             localStorage.setItem('plano_imagem', imagem);
             localStorage.setItem('plano_preco', preco);
             localStorage.setItem('plano_beneficios', JSON.stringify(beneficios));
         }
-
-        window.addEventListener('DOMContentLoaded', () => {
-            fetch('../../views/templates/header.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('header-placeholder').innerHTML = data;
-                });
-
-            fetch('../../views/templates/footer.html')
-                .then(response => response.text())
-                .then(data => {
-                    document.getElementById('footer-placeholder').innerHTML = data;
-                });
-        });
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
