style: remove atributo target _blank

--- a/views/plano-inicio.html
+++ b/views/plano-inicio.html
@@ -13,7 +13,7 @@
 
     <div class="container py-5">
         <div class="d-flex justify-content-end mb-4">
-             <a href="/views/aquisicao.html" target="_blank" class="btn-plan"
+             <a href="/views/aquisicao.html" class="btn-plan"
                onclick="setPlano('PLANO INDIVIDUAL', 'https://img.freepik.com/fotos-premium/uma-mulher-sorridente-numa-cadeira-dentaria-pronta-para-uma-consulta-dentaria_1276740-36733.jpg', 74.99, ['Consulta','Limpeza','Radiografia','Extração','Restauração','Emergência','Tratamento de Canal','Cirurgia','Atendimento rápido','Desconto em procedimentos não cobertos'])">
                 ADQUIRA SEU PLANO
             </a>
